# Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Raytracer.sln
Benchmark/: Benchmark.vcxproj  Benchmark.vcxproj.filters  CMakeLists.txt  GeometryBenchmark.cpp  HashGridBenchmark.cpp  MatrixBenchmark.cpp  MemoryBenchmark.cpp  PCH.h  PackedBenchmark.cpp  RandomBenchmark.cpp  TranscendentalBenchmark.cpp  VectorBenchmark.cpp
Core/: CMakeLists.txt  Common.h  Config.h  Core.vcxproj  Core.vcxproj.filters  PCH.h  RayLib.h
Core/BVH/: BVH.cpp  BVH.h  BVHBuilder.cpp  BVHBuilder.h
Core/Color/: Color.cpp  Color.h  ColorHelpers.h  LdrColor.h  RayColor.cpp  RayColor.h  Spectrum.h  Wavelength.cpp  Wavelength.h
Core/Containers/: ArrayIterator.h  ArrayIteratorImpl.h  ArrayView.h  ArrayViewImpl.h  DynArray.h  DynArrayImpl.h
Core/Material/: Material.cpp  Material.h  MaterialParameter.h
Core/Math/: Box.h  Distribution.cpp  Distribution.h  Float2.h  Float2Impl.h  Float3.h  Float3Impl.h  Geometry.cpp  Geometry.h  Half.h  HalfImpl.h  Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Packed.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.h  RayGeometry.h  Rectangle.h  SamplingHelpers.cpp  SamplingHelpers.h  Simd4Box.h  Simd4Ray.h  Simd4Triangle.h  Simd4Vector3.h  Simd8Box.h  Simd8Geometry.h  Simd8Ray.h  Simd8Triangle.h  Sphere.h  SphericalQuad.h  Transcendental.cpp  Transcendental.h  TranscendentalImpl.h  Transform.cpp  Transform.h  (+30 more)
Core/Mesh/: Mesh.cpp  Mesh.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferDesc.h
Core/Rendering/: BidirectionalPathTracer.cpp  BidirectionalPathTracer.h  Context.cpp  Context.h  Counters.h  DebugRenderer.cpp  DebugRenderer.h  Film.cpp  Film.h  LightTracer.cpp  LightTracer.h  PathDebugging.h  PathTracer.cpp  PathTracer.h  PathTracerMIS.cpp  PathTracerMIS.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  ShadingData.cpp  ShadingData.h  VertexConnectionAndMerging.cpp  VertexConnectionAndMerging.h  Viewport.cpp  Viewport.h
Core/Sampling/: GenericSampler.cpp  GenericSampler.h  HaltonSampler.cpp  HaltonSampler.h
Core/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
Core/Shapes/: BoxShape.cpp  BoxShape.h  CsgShape.cpp  CsgShape.h  MeshShape.cpp  MeshShape.h  RectShape.cpp  RectShape.h  Shape.cpp  Shape.h  SphereShape.cpp  SphereShape.h
Core/Textures/: BitmapTexture.cpp  BitmapTexture.h  CheckerboardTexture.cpp  CheckerboardTexture.h  ConstTexture.cpp  ConstTexture.h  MixTexture.cpp  MixTexture.h  NoiseTexture.cpp  NoiseTexture.h  Texture.cpp  Texture.h
Core/Traversal/: HitPoint.h  Intersection.h  RayPacket.cpp  RayPacket.h  RayStream.cpp  RayStream.h  TraversalContext.cpp  TraversalContext.h  Traversal_Packet.cpp  Traversal_Packet.h  Traversal_Simd.h  Traversal_Single.h
Core/Utils/: AlignmentAllocator.h  Bitmap.cpp  Bitmap.h  BitmapBMP.cpp  BitmapDDS.cpp  BitmapEXR.cpp  BlockCompression.cpp  BlockCompression.h  Entropy.cpp  Entropy.h  HashGrid.h  KdTree.cpp  KdTree.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  MemoryHelpers.cpp  MemoryHelpers.h  Profiler.cpp  Profiler.h  Texture.cpp  Texture.h  TextureEvaluator.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  iacaMarks.h
Demo/: CMakeLists.txt  CustomScene.cpp  Demo.cpp  Demo.h  Demo.vcxproj  Demo.vcxproj.filters  Demo_UserInterface.cpp  KeyCodes.h  Main.cpp  MeshLoader.cpp  MeshLoader.h  PCH.h  SceneLoader.cpp  SceneLoader.h  TestScenes.cpp  Window.h
Demo/Linux/: Window.cpp
Demo/Windows/: Window.cpp
RaytracerDemo/: CMakeLists.txt  Demo.cpp  Demo.h  Demo_UserInterface.cpp  KeyCodes.h  Main.cpp  MeshLoader.cpp  MeshLoader.h  PCH.h  RaytracerDemo.vcxproj  RaytracerDemo.vcxproj.filters  Renderer.cpp  Renderer.h  TestScenes.cpp  Timer.cpp  Timer.h  Window.cpp  Window.h
RaytracerDemo/Linux/: Window.cpp
RaytracerDemo/Windows/: Window.cpp
RaytracerLib/: BVH.cpp  BVH.h  BVHBuilder.cpp  BVHBuilder.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Config.h  Instance.cpp  Instance.h  Light.h  LightInstance.cpp  LightInstance.h  Logger.cpp  Logger.h  Material.cpp  Material.h  MaterialLayer.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  PCH.h  Random.cpp  Random.h  RayLib.h  RaytracerLib.vcxproj  RaytracerLib.vcxproj.filters  Scene.cpp  Scene.h  Timer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferDesc.h  Viewport.cpp  Viewport.h
RaytracerLib/BVH/: BVH.cpp  BVH.h  BVHBuilder.cpp  BVHBuilder.h
RaytracerLib/CPU/: CpuInstance.cpp  CpuInstance.h  CpuMesh.cpp  CpuMesh.h  CpuRaytracing.h  CpuScene.cpp  CpuScene.h  CpuViewport.cpp  CpuViewport.h  RayStream.h
RaytracerLib/Color/: Color.cpp  Color.h  ColorChecker.cpp  ColorChecker.h  ColorHelpers.h  LdrColor.h  RayColor.h
RaytracerLib/Material/: BSDF.cpp  BSDF.h  Material.cpp  Material.h  MaterialLayer.h
RaytracerLib/Math/: Box.cpp  Box.h  Constants.h  Float2.cpp  Float2.h  Float2Impl.h  Float3.cpp  Float3.h  Float3Impl.h  Geometry.cpp  Geometry.h  Half.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  QuaternionImpl.h  Random.cpp  Random.h  Ray.h  Simd4Box.h  Simd4Geometry.h  Simd4Ray.h  Simd4Triangle.h  Simd4Vector3.h  Simd8Box.h  Simd8Geometry.h  Simd8Ray.h  Simd8Triangle.h  Simd8Vector2.h  Simd8Vector3.h  Sphere.h  StratifiedRandom.cpp  StratifiedRandom.h  Transcendental.cpp  Transcendental.h  Transform.cpp  Transform.h  (+22 more)
RaytracerLib/Mesh/: Mesh.cpp  Mesh.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferDesc.h
RaytracerLib/Rendering/: Context.h  Counters.h  DebugRenderer.cpp  DebugRenderer.h  PathDebugging.h  PathTracer.cpp  PathTracer.h  (+8 more)
Tests/: ArrayViewTest.cpp  BitmapTest.cpp  CMakeLists.txt  ColorTest.cpp  DynArrayTest.cpp  HashGridTest.cpp  KdTreeTest.cpp  Main.cpp  MathDistributionTest.cpp  MathGeometryTest.cpp  MathMatrix4Test.cpp  MathPackedTest.cpp  MathQuaternionTest.cpp  MathTest.cpp  MathTranscendentalTest.cpp  MathVector4LoadTest.cpp  MathVector4Test.cpp  MathVector8Test.cpp  MathVectorInt4Test.cpp  MathVectorInt8Test.cpp  PCH.h  RandomTest.cpp  RaytracingTests.cpp  TestClasses.h  Tests.vcxproj  Tests.vcxproj.filters
(+174 files in other folders)
