MESSAGE("Generating Makefile for Benchmark project")

FILE(GLOB RT_BENCHMARK_SOURCES *.cpp)
FILE(GLOB_RECURSE RT_BENCHMARK_EXTERNAL_SOURCES ../External/benchmark/*.cc)
FILE(GLOB RT_BENCHMARK_HEADERS *.h)

# Search for dependencies
# PKG_CHECK_MODULES(RT_BENCHMARK_DEPS REQUIRED)

INCLUDE_DIRECTORIES(${RT_BENCHMARK_DIRECTORY}/ ${RT_ROOT_DIRECTORY}/External/benchmark/include/ ${RT_ROOT_DIRECTORY}/External/benchmark/)
LINK_DIRECTORIES(${RT_LIB_DIRECTORY} ${RT_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(Benchmark ${RT_BENCHMARK_SOURCES} ${RT_BENCHMARK_HEADERS} ${RT_BENCHMARK_EXTERNAL_SOURCES} ${RT_BENCHMARK_LINUX_SOURCES})
SET_TARGET_PROPERTIES(Benchmark PROPERTIES LINK_FLAGS "-pthread")

ADD_DEPENDENCIES(Benchmark Core)
TARGET_LINK_LIBRARIES(Benchmark Core dl ${RT_BENCHMARK_DEPS_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET Benchmark POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:Benchmark> ${RT_OUTPUT_DIRECTORY}/${targetfile})
