MESSAGE("Generating Makefile for Demo project")

FILE(GLOB RT_DEMO_SOURCES *.cpp)
FILE(GLOB RT_DEMO_LINUX_SOURCES Linux/*.cpp)
FILE(GLOB_RECURSE RT_DEMO_EXTERNAL_SOURCES ../External/*.cpp)
FILE(GLOB RT_DEMO_HEADERS *.h)

# Search for dependencies
PKG_CHECK_MODULES(RT_DEMO_DEPS REQUIRED xcb xcb-image)

INCLUDE_DIRECTORIES(${RT_DEMO_DIRECTORY}/ ${RT_ROOT_DIRECTORY}/External/)
LINK_DIRECTORIES(${RT_LIB_DIRECTORY} ${RT_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(Demo ${RT_DEMO_SOURCES} ${RT_DEMO_HEADERS} ${RT_DEMO_EXTERNAL_SOURCES} ${RT_DEMO_LINUX_SOURCES})
SET_TARGET_PROPERTIES(Demo PROPERTIES LINK_FLAGS "-pthread")

ADD_DEPENDENCIES(Demo Core)
TARGET_LINK_LIBRARIES(Demo Core dl ${RT_DEMO_DEPS_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET Demo POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:Demo> ${RT_OUTPUT_DIRECTORY}/${targetfile})
