MESSAGE("Generating Makefile for RaytracerDemo")

FILE(GLOB RT_DEMO_SOURCES *.cpp)
FILE(GLOB RT_DEMO_LINUX_SOURCES Linux/*.cpp)
FILE(GLOB_RECURSE RT_DEMO_EXTERNAL_SOURCES ../External/*.cpp)
FILE(GLOB RT_DEMO_HEADERS *.h)

# Search for dependencies
PKG_CHECK_MODULES(RT_DEMO_DEPS REQUIRED xcb xcb-image)

INCLUDE_DIRECTORIES(${RT_DEMO_DIRECTORY}/ ${RT_ROOT_DIRECTORY}/External/)
LINK_DIRECTORIES(${RT_LIB_DIRECTORY} ${RT_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(RaytracerDemo ${RT_DEMO_SOURCES} ${RT_DEMO_HEADERS} ${RT_DEMO_EXTERNAL_SOURCES} ${RT_DEMO_LINUX_SOURCES})
SET_TARGET_PROPERTIES(RaytracerDemo PROPERTIES LINK_FLAGS "-pthread")

ADD_DEPENDENCIES(RaytracerDemo RaytracerLib)
TARGET_LINK_LIBRARIES(RaytracerDemo RaytracerLib dl ${RT_DEMO_DEPS_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET RaytracerDemo POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:RaytracerDemo> ${RT_OUTPUT_DIRECTORY}/${targetfile})
