MESSAGE("Generating Makefile for Tests project")

FILE(GLOB RT_TESTS_SOURCES *.cpp)
FILE(GLOB_RECURSE RT_TESTS_EXTERNAL_SOURCES ../External/googletest/*.cc)
FILE(GLOB RT_TESTS_HEADERS *.h)

# Search for dependencies
# PKG_CHECK_MODULES(RT_TESTS_DEPS REQUIRED)

INCLUDE_DIRECTORIES(${RT_TESTS_DIRECTORY}/ ${RT_ROOT_DIRECTORY}/External/googletest/include/ ${RT_ROOT_DIRECTORY}/External/googletest/)
LINK_DIRECTORIES(${RT_LIB_DIRECTORY} ${RT_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(Tests ${RT_TESTS_SOURCES} ${RT_TESTS_HEADERS} ${RT_TESTS_EXTERNAL_SOURCES} ${RT_TESTS_LINUX_SOURCES})
SET_TARGET_PROPERTIES(Tests PROPERTIES LINK_FLAGS "-pthread")

ADD_DEPENDENCIES(Tests Core)
TARGET_LINK_LIBRARIES(Tests Core dl ${RT_TESTS_DEPS_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET Tests POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:Tests> ${RT_OUTPUT_DIRECTORY}/${targetfile})
